hphp/hack/test/typecheck/pending_switch11.php.exp
File "pending_switch11.php", line 7, characters 12-13:
Undefined variable: $x (Naming[2050])
